WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293273
css/css-view-transitions/fractional-* fails due to not pixel snapping view transition renderers
https://bugs.webkit.org/show_bug.cgi?id=293273
Summary
css/css-view-transitions/fractional-* fails due to not pixel snapping view tr...
Matt Woodrow
Reported
2025-05-19 19:08:41 PDT
These test cover trying to match captured VT elements with their normal rendering, for elements with sub pixel positioning.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-19 19:08:52 PDT
<
rdar://problem/151661047
>
Matt Woodrow
Comment 2
2025-05-19 19:37:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45626
EWS
Comment 3
2025-05-24 21:36:00 PDT
Committed
295401@main
(72ba48fd55e6): <
https://commits.webkit.org/295401@main
> Reviewed commits have been landed. Closing PR #45626 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug