css/css-view-transitions/fractional-* fails due to not pixel snapping view transition renderers. https://bugs.webkit.org/show_bug.cgi?id=293273 <rdar://151661047>

Reviewed by Simon Fraser.

Moves the duplicated state in CapturedElement into a separate struct, and use
that to simplify parameters of copyElementBaseProperties.

Compute and remove the fractional component of the view transition transform,
and pass it through to the snapshot rendering.

Snap the layer rects to pixels, so that the fractional component gets computed
and passed down the inner layer, as it does for non-VT rendering.

* LayoutTests/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::captureOverflowRect):
(WebCore::snapshotElementVisualOverflowClippedToViewport):
(WebCore::ViewTransition::captureOldState):
(WebCore::ViewTransition::updatePropertiesForGroupPseudo):
(WebCore::ViewTransition::captureNewState):
(WebCore::ViewTransition::setupDynamicStyleSheet):
(WebCore::snapTransformationTranslationToDevicePixels):
(WebCore::ViewTransition::copyElementBaseProperties):
(WebCore::ViewTransition::updatePseudoElementStylesRead):
(WebCore::ViewTransition::updatePseudoElementRenderers):
* Source/WebCore/dom/ViewTransition.h:
* Source/WebCore/platform/graphics/transforms/TransformationMatrix.h:
(WebCore::TransformationMatrix::hasPerspective const):
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::outputPaintOrderTreeRecursive):
(WebCore::RenderLayer::filtersForPainting const): Deleted.
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):
* Source/WebCore/rendering/updating/RenderTreeUpdaterViewTransition.cpp:
(WebCore::createRendererIfNeeded):

Canonical link: https://commits.webkit.org/295401@main